--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -4,6 +4,7 @@
 
 .about-header {
     font-size: 50px;
+    text-align: center;
 }
 
 .about-header .header-dot {
@@ -20,7 +21,7 @@
 
 .about-text-container {
     margin-left: 50px;
-    background-color: #6b6be5;
+    background-color: #FF4C60;
     border-radius: 20px;
     padding: 25px;
     box-shadow: 5px 10px 25px #000000;
@@ -34,7 +35,50 @@
 
 .about-text {
     font-weight: 300;
-    font-size: 17px;
+    font-size: 18px;
+}
+
+.tech-content {
+    margin-top: 75px;
+    margin-bottom: 75px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.tech-container {
+    background: #302f4e;
+    flex-basis: 25%;
+    border-radius: 20px;
+    margin: 0px 15px;
+    box-shadow: 0px 10px 50px black;
+    flex-grow: 1;
+}
+
+.tech-container ul {
+    padding: 0px;
+    list-style: none;
+    text-align: center;
+}
+
+.tech-container li {
+    font-weight: 300;
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
+.tech-header {
+    text-align: center;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.tech-icon {
+    height: 60px;
+    margin: 0 auto;
+    display: block;
 }
 
 .client-content {
@@ -55,7 +99,8 @@
     text-align: center;
     padding-bottom: 5px;
     margin-top: 0px;
-    flex-basis: 100%;margin-bottom: 10px;
+    flex-basis: 100%;
+    margin-bottom: 10px;
 }
 
 .client-header::after {
@@ -85,15 +130,12 @@
     }
     .about-content {
         flex-wrap: wrap;
-        justify-content: center;   
+        justify-content: center;
     }
     .about-text-container {
         margin-top: 25px;
         margin-left: 0px;
         min-width: 0px;
-    }
-    .about-header {
-        text-align: center;
     }
 }
 
@@ -104,5 +146,16 @@
     }
     .client-logo {
         height: 30px;
+    }
+    .tech-container {
+        flex-basis: 100%;
+        margin: 15px 15%;
+    }
+    .tech-content {
+        margin-top: 15px;
+        margin-bottom: 0px;
+    }
+    .client-content {
+        margin-top: 15px;
     }
 }
