--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -1,7 +1,3 @@
-.about-container {
-    padding: 50px 0px;
-}
-
 .about-header {
     font-size: 50px;
     text-align: center;
@@ -35,7 +31,7 @@
 
 .about-text {
     font-weight: 300;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .tech-content {
@@ -63,7 +59,7 @@
 
 .tech-container li {
     font-weight: 300;
-    font-size: 18px;
+    font-size: 20px;
     margin: 10px 0px;
 }
 
@@ -73,6 +69,7 @@
     letter-spacing: 2px;
     margin-bottom: 10px;
     margin-top: 10px;
+    font-size: 26px;
 }
 
 .tech-icon {
@@ -101,6 +98,7 @@
     margin-top: 0px;
     flex-basis: 100%;
     margin-bottom: 10px;
+    font-size: 26px;
 }
 
 .client-header::after {
@@ -136,6 +134,9 @@
         margin-top: 25px;
         margin-left: 0px;
         min-width: 0px;
+    }
+    .about-text {
+        text-align: center;
     }
 }
 
