--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -2,3 +2,61 @@
     text-align: center;
     font-size: 50px;
 }
+
+.projects-list {
+    border-radius: 20px;
+    box-shadow: 5px 10px 25px #000000;
+}
+
+.accordion {
+    cursor: pointer;
+    padding: 20px 30px;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 24px;
+    transition: 0.5s;
+    text-align: center;
+    background: #302f4e;
+    color: white;
+}
+
+.accordion.active {
+    background: #252525;
+}
+
+.accordion i {
+    float: right;
+    font-size: 22px;
+}
+
+.accordion i.flipped {
+    transform: rotate(180deg);
+}
+
+.accordion.first {
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.accordion.last {
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.accordion:hover {
+    background-color: #252525;
+}
+
+.panel {
+    padding: 0px 25px;
+    background-color: #252525;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s ease-out, padding 0.25s ease-out;
+}
+
+.active + .panel {
+    padding: 20px 25px;
+    padding-top: 0px;
+}
