--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -88,6 +88,7 @@
     box-shadow: 5px 10px 25px #000000;
     justify-content: center;
     flex-wrap: wrap;
+    border: 10px solid #3aaee3;
 }
 
 .client-header {
@@ -114,7 +115,7 @@
 .client {
     flex-basis: 20%;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .client-logo {
@@ -143,7 +144,7 @@
 @media only screen and (max-width: 767px) {
     .client {
         flex-basis: 30%;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
     }
     .client-logo {
         height: 30px;
