--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #252525;
     font-family: 'Source Sans Pro', serif;
@@ -7,9 +11,13 @@ body {
     overflow-x: hidden;
 }
 
+body * {
+    font-family: 'Source Sans Pro', serif;
+}
+
 .container {
     position: relative;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .header-dot {
@@ -22,4 +30,14 @@ body {
 
 p {
     margin: 0;
+}
+
+a {
+    font-weight: 500;
+    color: white;
+    transition: color 0.25s;
+}
+
+a:hover {
+    color: #6bea7c;
 }
