--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -31,7 +31,7 @@
 
 .about-text {
     font-weight: 300;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .tech-content {
@@ -55,11 +55,12 @@
     padding: 0px;
     list-style: none;
     text-align: center;
+    margin: 15px;
 }
 
 .tech-container li {
     font-weight: 300;
-    font-size: 20px;
+    font-size: 24px;
     margin: 10px 0px;
 }
 
@@ -67,13 +68,12 @@
     text-align: center;
     font-weight: 300;
     letter-spacing: 2px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    font-size: 26px;
+    font-size: 30px;
+    margin: 15px;
 }
 
 .tech-icon {
-    height: 60px;
+    height: 75px;
     margin: 0 auto;
     display: block;
 }
@@ -98,7 +98,7 @@
     padding-bottom: 5px;
     margin-top: 0px;
     flex-basis: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     font-size: 26px;
 }
 
@@ -159,5 +159,14 @@
     }
     .client-content {
         margin-top: 15px;
+    }
+    .about-text {
+        font-size: 22px;
+    }
+    .tech-header {
+        font-size: 26px;
+    }
+    .tech-container li {
+        font-size: 22px;
     }
 }
