--- a/portfolio/src/components/contact/contact.css
+++ b/portfolio/src/components/contact/contact.css
@@ -21,7 +21,7 @@
 }
 
 .get-in-touch {
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 200;
     text-align: center;
 }
@@ -35,8 +35,8 @@
     color: white;
     display: block;
     border-radius: 30px;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 22px;
+    font-weight: 600;
     padding: 15px 35px;
     border: none;
     outline: none;
