--- a/portfolio/src/components/home/home.css
+++ b/portfolio/src/components/home/home.css
@@ -20,7 +20,7 @@
 .profile-name {
     font-weight: 300;
     letter-spacing: 2px;
-    font-size: 45px;
+    font-size: 50px;
     margin-bottom: 0px;
     margin-top: 10px;
 }
@@ -28,7 +28,7 @@
 .profile-title {
     font-weight: 200;
     margin-top: 0px;
-    font-size: 30px;
+    font-size: 35px;
     margin-bottom: 10px;
 }
 
@@ -41,15 +41,15 @@
 
 .social-link {
     display: inline-block;
-    font-size: 35px;
+    font-size: 45px;
     margin: 0px 15px;
     cursor: pointer;
-    transition: color ease 250ms, transform ease 250ms;
+    transition: color ease 100ms, transform ease 100ms;
 }
 
 .social-link:hover {
     color: #6bea7c;
-    transform: scale(1.1)
+    transform: scale(1.2)
 }
 
 .hire-button {
@@ -57,8 +57,8 @@
     color: white;
     display: inline-block;
     border-radius: 30px;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: 600;
     padding: 15px 35px;
     border: none;
     outline: none;
@@ -98,7 +98,7 @@
     display: block;
     margin: -10px 0px;
     font-size: 20px;
-    animation: fadeInDown 2s infinite;
+    animation: fadeInDownArrow 2s infinite;
     color: #FF4C60;
 }
 
@@ -110,7 +110,7 @@
     animation-delay: 1s;
 }
 
-@keyframes fadeInDown {
+@keyframes fadeInDownArrow {
     0% {
         opacity: 0;
     }
@@ -131,14 +131,19 @@
     }
     .profile-name {
         margin-top: 25px;
-    }
-    .profile-title {
-        margin-top: 20px;
+        font-size: 40px;
     }
     .social-links {
-        margin-top: 20px;
+        margin-top: 30px;
+    }
+    .social-link {
+        font-size: 40px;
     }
     .hire-button {
-        margin-top: 25px;
+        margin-top: 30px;
+    }
+    .profile-title {
+        font-size: 30px;
+        margin-top: 0px;
     }
 }
