--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -1,5 +1,5 @@
 .about-header {
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
 }
 
@@ -9,8 +9,8 @@
 
 .bitmoji-waving {
     border: 2px solid white;
-    height: 225px;
-    width: 225px;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     box-shadow: 5px 10px 25px #000000;
 }
@@ -31,7 +31,7 @@
 
 .about-text {
     font-weight: 300;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .tech-content {
@@ -48,7 +48,7 @@
     border-radius: 20px;
     margin: 0px 15px;
     box-shadow: 0px 10px 50px black;
-    flex-grow: 1;
+    min-width: 25%;
 }
 
 .tech-container ul {
@@ -60,7 +60,7 @@
 
 .tech-container li {
     font-weight: 300;
-    font-size: 24px;
+    font-size: 20px;
     margin: 10px 0px;
 }
 
@@ -68,12 +68,12 @@
     text-align: center;
     font-weight: 300;
     letter-spacing: 2px;
-    font-size: 30px;
+    font-size: 25px;
     margin: 15px;
 }
 
 .tech-icon {
-    height: 75px;
+    height: 60px;
     margin: 0 auto;
     display: block;
 }
@@ -89,6 +89,8 @@
     justify-content: center;
     flex-wrap: wrap;
     border: 10px solid #3aaee3;
+    margin: 0 auto;
+    max-width: 80%;
 }
 
 .client-header {
@@ -99,7 +101,7 @@
     margin-top: 0px;
     flex-basis: 100%;
     margin-bottom: 25px;
-    font-size: 26px;
+    font-size: 25px;
 }
 
 .client-header::after {
@@ -119,7 +121,7 @@
 }
 
 .client-logo {
-    height: 45px;
+    height: 40px;
     width: auto;
 }
 
