--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -1,6 +1,6 @@
 .projects-header {
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .projects-list {
@@ -14,12 +14,12 @@
     width: 100%;
     border: none;
     outline: none;
-    font-size: 28px;
+    font-size: 25px;
     transition: 0.5s;
     text-align: center;
     background: #00c3ff;
     color: white;
-    font-weight: 300;
+    font-weight: 600;
     border-bottom: 1px solid #0a2146;
 }
 
@@ -62,7 +62,7 @@
     overflow: hidden;
     transition: max-height 500ms ease-out, padding 500ms ease-out;
     font-weight: 200;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .active + .panel {
@@ -71,13 +71,16 @@
 }
 
 .panel img {
-    width: 100%;
+    width: 65%;
+    height: auto;
     border-radius: 10px;
     margin: 25px 0px;
+    display: block;
 }
 
 .panel h3 {
     font-weight: 500;
+    font-size: 20px;
 }
 
 .panel ul {
