Deploying new build

--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -17,7 +17,7 @@
 
 .about-text-container {
     margin-left: 50px;
-    background-color: #FF4C60;
+    background-color: #be4058;
     border-radius: 20px;
     padding: 25px;
     box-shadow: 5px 10px 25px #000000;
@@ -163,7 +163,7 @@
         margin-top: 15px;
     }
     .about-text {
-        font-size: 22px;
+        font-size: 20px;
     }
     .tech-header {
         font-size: 26px;
