--- a/portfolio/src/components/contact/contact.css
+++ b/portfolio/src/components/contact/contact.css
@@ -31,7 +31,7 @@
 }
 
 .email-button, .linkedin-button {
-    background: #FF4C60;
+    background: #be4058;
     color: white;
     display: block;
     border-radius: 30px;
