--- a/portfolio/src/components/home/home.css
+++ b/portfolio/src/components/home/home.css
@@ -53,7 +53,7 @@
 }
 
 .hire-button {
-    background: #FF4C60;
+    background: #be4058;
     color: white;
     display: inline-block;
     border-radius: 30px;
